updating front end

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="container">
 	    <h2>hello</h2>
+	    <h3>hello </h3>
 	    <h2>Add New User</h2>
         <input type="text" id="name" placeholder="Username">
         <input type="email" id="email" placeholder="Email">
